fix minor spacing issue with experience section

--- a/src/components/experience/Experience.scss
+++ b/src/components/experience/Experience.scss
@@ -58,7 +58,7 @@
     padding-left: 28px;
 
     @media only screen and (min-width: $desktop) {
-      line-height: 28px;
+      line-height: 32px;
       padding-left: 36px;
     }
 
